fix the admin navbar from covering parts of the fixed navigation close #70

--- a/sites/all/themes/otools/sass/_main.scss
+++ b/sites/all/themes/otools/sass/_main.scss
@@ -120,6 +120,23 @@ a.button
         }
     }
 }
+.navbar-fixed
+{
+  .navigation
+  {
+    top: 39px;
+  }
+  &.navbar-horizontal.navbar-tray-open .navigation
+  {
+    top: 80px;
+  }
+  &.navbar-vertical.navbar-tray-open .navigation
+  {
+    left: 240px;
+    right: 0;
+    width: auto;
+  }
+}
 
 .logo
 {
